bundle install and ready to push update of site

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Welcome to my app</h1>
-<p>Sign up <%=link_to "here", "#"  %></p>
+<div class="jumbotron">
+	<h3>Thanks for visiting. Sign up to get my essays:</h3>
+	<div class="input-group"><input type="text" class="form-control" placeholder="Email - don't worry I will never spam you" aria-describedby="basic-addon1">
+	</div>
+	
+</div>
