--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<%= link_to "Blog", root_path %>
-	<%= link_to "About", about_path %>
+	<nav class="navbar navbar-default">
+		<a class="navbar-brand" href="#">Zac Campbell</a>
+		<ul class="nav navbar-nav navbar-right">
+		<li class="active"><%= link_to "Blog", root_path %></li>
+		<li class="active"><%= link_to "About", about_path %></li>
+	</ul>
+	</nav>
 
-<%= yield %>
+<div class ="container">
+	<%= yield %>
+</div>
 
 </body>
 </html>
