--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,3 +1,4 @@
-$navbar-default-bg: #1e4554;
-$navbar-default-link-color: #ff0016;
+$font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$navbar-default-bg: #3498db;
+$navbar-default-link-color: #ecf0f1;
 @import 'bootstrap';
