--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,21 @@
 </head>
 <body>
 	<nav class="navbar navbar-default">
-		<a class="navbar-brand" href="#">Zac Campbell</a>
+		<a class="navbar-brand" href="#">Pinteresting</a>
 		<ul class="nav navbar-nav navbar-right">
-		<li class="active"><%= link_to "Blog", root_path %></li>
-		<li class="active"><%= link_to "About", about_path %></li>
-	</ul>
+		<li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
+       
+      
+          <li><%= link_to "Sign in", new_user_session_path %></li>
+      
+    </ul>
 	</nav>
 
 <div class ="container">
+	<% flash.each do |name,msg| %>
+	<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+	<% end %>
 	<%= yield %>
 </div>
 
