--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,11 @@
-<div class="jumbotron">
-	<% if user_signed_in? %>
-	<h2>Welcome back!</h2>
-	<% else %>
-	<h3>Thanks for visiting. </h3>
-	<%= link_to "login", new_user_session_path, class: "btn btn-default btn-lg" %>
-	<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default btn-lg" %></h3>
-	<% end %>
+<div class="jumbotron center">
+     <h1>Welcome to my app!</h1>
+     <% if user_signed_in? %>
+          # do something
+     <% else %>
+       <p>
+         <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+       </p>
+  <% end %>  
 </div>
