--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,4 +1,13 @@
 $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$navbar-default-bg: #3498db;
-$navbar-default-link-color: #ecf0f1;
 @import 'bootstrap';
+
+
+.btn {
+	color: #fffFff; 
+    padding: 8px 15px;
+    border: 0 none;
+    font-weight: 300;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+ 
