--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,19 @@
 </head>
 <body>
 	<nav class="navbar navbar-default">
-		<a class="navbar-brand" href="#">Pinteresting</a>
+		<div class="container-fluid">
+		<a class="navbar-brand" href="/">Pinteresting</a>
 		<ul class="nav navbar-nav navbar-right">
 		<li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
        <% if user_signed_in? %>
+       	  <li><%= link_to "Settings", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :get, :confirm=> "Are you sure?" %></li>
         <% else %>
           <li><%= link_to "Sign in", new_user_session_path %></li>
         <% end %>
     </ul>
+    </div>
 	</nav>
 
 <div class ="container">
