--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,11 @@
 $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
 @import 'bootstrap';
 
+nav a
+{
+    color: black !important;
+}
+
 
 .btn {
 	color: #fffFff; 
@@ -8,6 +13,6 @@ $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
     border: 0 none;
     font-weight: 300;
     letter-spacing: 1px;
-    text-transform: uppercase;
+
 }
  
