--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Pinteresting</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -11,9 +12,10 @@
 		<div class="container-fluid">
 		<a class="navbar-brand" href="/">Pinteresting</a>
 		<ul class="nav navbar-nav navbar-right">
-		<li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", about_path %></li>
+		  <!-- <li><%= link_to "Home", root_path %></li>
+       <li><%= link_to "About", about_path %></li>-->
        <% if user_signed_in? %>
+          <li><%= link_to "Pins", pins_path %></li>
        	  <li><%= link_to "Settings", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :get, :confirm=> "Are you sure?" %></li>
         <% else %>
