--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_field :description, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.submit "+ Add Pin", class: "btn btn-lg btn-success" %>
+    <%= f.submit "Save", class: "btn btn-lg btn-success" %>
   </div>
 <% end %>
