--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<!--<p id="notice"><%= notice %></p>-->
 <div class = "panel panel-default">
   <div class = "panel-heading">
     <h1>Listing Pins</h1>
@@ -16,16 +16,20 @@
         <% @pins.each do |pin| %>
           <tr>
             <td><%= pin.description %></td>
-            <td><%= pin.user.email if pin.user %></td>
+            <td><%= image_tag pin.image.url(:medium) %></td>
             <td><%= link_to 'Show', pin, class: "btn btn-info" %></td>
+            <% if pin.user == current_user %>
             <td><%= link_to 'Edit', edit_pin_path(pin), class: "btn btn-warning" %></td>
             <td><%= link_to 'Trash', pin, method: :delete, data: {confirm: 'You sure?'},  class: "btn  btn-danger" %></td>
+            <% end %>
           </tr>
         <% end %>
       </tbody>
     </table>
     </div>
     <div class = "panel-footer">
+      <% if user_signed_in? %>
     <%= link_to '+ New Pin', new_pin_path, class: "btn btn-lg btn-success"%>
+    <% end %>
     </div>
     </div>
