--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -5,9 +5,12 @@
 <p>
   <strong>Description:</strong>
   <%= @pin.description %>
+  <%= image_tag @pin.image.url(:medium) %>
 </p>
 </div>
 <div class = "panel-footer">
+	<% if @pin.user == current_user %>
 <%= link_to 'Edit', edit_pin_path(@pin) %> |
+<% end %>
 <%= link_to 'Back', pins_path %>
 </div></div>
