push the html for jihan

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,31 @@
-<h1>About Zac</h1>
-<p>We are working on our omr app</p>
+<div class = "col-md-5 col-md-offset-3">
+	<div class="panel panel-default">
+		<div class = "panel-heading"><center>
+			<h2>Stephen Curry</h2>
+			Tags: 
+				<span style="align:right" class="label label-success">Fun Fact</span>
+				<span style="align:right" class="label label-info">Player Stat</span>
+				<span style="align:right" class="label label-danger">History</span></center>
+		</div>
+		<div class="panel-body">
+		<div class="form-group">
+	  		<center>
+	  			<img src ="https://dl.dropboxusercontent.com/s/djr75hs7t73t642/2016-05-17%20at%208.23%20PM.png" height = 350 width = auto/>
+	  		</center>
+	  	</div>
+		<div>
+			<div class ="panel panel-primary">
+			<div class = "panel-heading"><span class="glyphicon glyphicon-star" aria-hidden="true"> </span>&nbsp;Did you know...</div>
+			Stephen Curry broke Reggie Miller's record of 58 3 pt's through playoffs, Steph got 98 in 2015. TBD 2016
+		</div>
+			
+		</div>
+		<hr>
+		<%= link_to "Next dub stat >>", root_path, class: "form-control btn btn-warning" %>
+	</div>
+	<div class = "panel-footer">
+		<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+		<%= link_to "Like us? Help us keep this accurate" ,"#"%>  
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#bestseasoneva
+	</div>
+</div>
