--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,4 +1,5 @@
 $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css");
 @import 'bootstrap';
 
 nav a
@@ -14,5 +15,7 @@ nav a
     font-weight: 300;
     letter-spacing: 1px;
 
+
 }
  
+
