--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pinteresting</title>
+  <title>Warriors2016 - Documenting the Best Season Ever </title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag :defaults %>
@@ -10,17 +10,18 @@
 <body>
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
-		<a class="navbar-brand" href="/">Pinteresting</a>
+		<a class="navbar-brand" href="/">Warriors2016 - Documenting the Best Season Ever </a>
 		<ul class="nav navbar-nav navbar-right">
+      <li><%= link_to"73-9", "#"%></li>
 		  <!-- <li><%= link_to "Home", root_path %></li>
-       <li><%= link_to "About", about_path %></li>-->
+       <li><%= link_to "About", about_path %></li>
        <% if user_signed_in? %>
           <li><%= link_to "Pins", pins_path %></li>
        	  <li><%= link_to "Settings", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :get, :confirm=> "Are you sure?" %></li>
         <% else %>
           <li><%= link_to "Sign in", new_user_session_path %></li>
-        <% end %>
+        <% end %>-->
     </ul>
     </div>
 	</nav>
