--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,7 +10,7 @@
 		<div class="panel-body">
 		<div class="form-group">
 	  		<center>
-	  			<img src ="https://dl.dropboxusercontent.com/s/djr75hs7t73t642/2016-05-17%20at%208.23%20PM.png" height = 350 width = auto/>
+	  			<img src ="https://dl.dropboxusercontent.com/s/djr75hs7t73t642/2016-05-17%20at%208.23%20PM.png" height = auto width = auto/>
 	  		</center>
 	  	</div>
 		<div>
